Fixing Path issues